--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,22 +9,40 @@
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
 </head>
+
 <body>
 
-    <input type="search" name="search" id="search">
-    <button>Search</button>
-    
-    
-    <div class="data">
-        <div class="name"></div>
-        <div class="temp"></div>
-        <div class="pressure"></div>
-        <div class="humidity"></div>
-        <div class="wind-speed"></div>
-    </div>
-    <div class="error"></div>
-    <div class="loading">Loading...</div>
+    <main>
+        <div class="data">
+            <div class="name"></div>
+            <div class="indicator">
+                <img src="icons/thermometer.svg" alt="thermometer">
+                <span>
+                    <span class="temp"></span> °C
+                </span>
+            </div>
+            <div class="indicator">
+                <img src="icons/gauge.svg" alt="barometer">
+                <span><span class="pressure"></span> hPa</span>
+            </div>
+            <div class="indicator">
+                <img src="icons/water-percent.svg" alt="humidity">
+                <span><span class="humidity"></span> %</span>
+            </div>
+            <div class="indicator">
+                <img src="icons/weather-windy.svg" alt="wind speed">
+                <span><span class="wind-speed"></span> km/h</span>
+            </div>
+        </div>
+        <div class="error"></div>
+        <div class="loading">Loading...</div>
 
+        <div class="search-container">
+            <input type="search" name="search" id="search">
+            <button>Search</button>
+        </div>
+    </main>
 
 </body>
+
 </html>
